# k230_linux_sdk

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md
.github/: CONTRIBUTING.md  (+1 more)
buildroot-overlay/package/ai_demo/: CMakeLists.txt  build.sh
buildroot-overlay/package/ai_demo/anomaly_det/: CMakeLists.txt  anomaly_det.cc  anomaly_det.h  main.cc
buildroot-overlay/package/ai_demo/bytetrack/: BYTETracker.cc  CMakeLists.txt  main.cc  person_detect.h
buildroot-overlay/package/ai_demo/common/: ai_base.cc  ai_base.h  dma_buf_manager.cc  dma_buf_manager.h  scoped_timing.hpp  sensor_buf_manager.cc  sensor_buf_manager.h  utils.cc  utils.h  vi_vo.h
buildroot-overlay/package/ai_demo/crosswalk_detect/: CMakeLists.txt  README.md  crosswalk_detect.cc  crosswalk_detect.h  main.cc
buildroot-overlay/package/ai_demo/demo_mix/: CMakeLists.txt  README.md  crop.cc  crop.h  cv2_utils.cc  cv2_utils.h  dynamic_gesture.h  face_pose.cc  face_pose.h  hand_keypoint.cc  hand_keypoint.h  main.cc  nanotracker.cc  nanotracker.h  src.cc  src.h
buildroot-overlay/package/ai_demo/dynamic_gesture/: CMakeLists.txt  README.md  dynamic_gesture.cc  hand_detection.cc  hand_keypoint.cc  hand_keypoint.h  main.cc
buildroot-overlay/package/ai_demo/eye_gaze/: CMakeLists.txt  README.md  eye_gaze.cc  eye_gaze.h  main.cc
buildroot-overlay/package/ai_demo/face_alignment/: CMakeLists.txt  constant.h  face_alignment.cc  face_alignment.h  face_alignment_post.cc  face_alignment_post.h  main.cc  rasterize.cc  rasterize.h
buildroot-overlay/package/ai_demo/face_detection/: CMakeLists.txt  face_detection.cc  main.cc
buildroot-overlay/package/ai_demo/face_emotion/: CMakeLists.txt  face_detection.cc  face_emotion.cc  face_emotion.h  main.cc
buildroot-overlay/package/ai_demo/face_gender/: CMakeLists.txt  face_gender.cc  face_gender.h  main.cc
buildroot-overlay/package/ai_demo/face_glasses/: CMakeLists.txt  anchors_320.cc  face_glasses.cc  face_glasses.h  main.cc
buildroot-overlay/package/ai_demo/face_landmark/: CMakeLists.txt  face_dense_landmark.cc  face_dense_landmark.h  main.cc
buildroot-overlay/package/ai_demo/face_mask/: CMakeLists.txt  face_detection.h  face_mask.cc  face_mask.h  main.cc
buildroot-overlay/package/ai_demo/face_mesh/: CMakeLists.txt  face_mesh.cc  face_mesh.h  face_mesh_post.cc  face_mesh_post.h  main.cc
buildroot-overlay/package/ai_demo/face_parse/: CMakeLists.txt  face_parse.cc  face_parse.h  main.cc
buildroot-overlay/package/ai_demo/face_pose/: CMakeLists.txt  README.md  main.cc
buildroot-overlay/package/ai_demo/face_verification/: CMakeLists.txt  README.md  anchors_640.cc  main.cc
buildroot-overlay/package/ai_demo/falldown_detect/: CMakeLists.txt  falldown_detect.cc  falldown_detect.h  main.cc
buildroot-overlay/package/ai_demo/finger_guessing/: CMakeLists.txt  hand_detection.cc  hand_detection.h  hand_keypoint.cc  hand_keypoint.h  main.cc
buildroot-overlay/package/ai_demo/fitness/: CMakeLists.txt  main.cc  pose_action.cc  pose_action.h  pose_detect.cc  pose_detect.h
buildroot-overlay/package/ai_demo/head_detection/: CMakeLists.txt  head_detection.cc  head_detection.h  main.cc
buildroot-overlay/package/ai_demo/helmet_detect/: CMakeLists.txt  README.md  helmet_detect.cc  helmet_detect.h  main.cc
buildroot-overlay/package/ai_demo/kws/: CMakeLists.txt  README.md  feature_pipeline.cc  get_pcm.cc  get_pcm.h  kws.cc  kws.h  main.cc  play_wav.cc  play_wav.h
buildroot-overlay/package/ai_demo/licence_det/: CMakeLists.txt  licence_det.h  main.cc
buildroot-overlay/package/ai_demo/licence_det_rec/: CMakeLists.txt  licence_det.cc  licence_reco.cc  licence_reco.h  main.cc
buildroot-overlay/package/ai_demo/object_detect_yolov8n/: CMakeLists.txt  main.cc  ob_det.cc  ob_det.h
buildroot-overlay/package/ai_demo/ocr/: CMakeLists.txt  main.cc  ocr_box.cc  ocr_box.h  ocr_reco.cc  ocr_reco.h  text_paint.cc  text_paint.h
buildroot-overlay/package/ai_demo/person_attr/: CMakeLists.txt  main.cc  person_detect.cc  pulc.cc  pulc.h
buildroot-overlay/package/ai_demo/person_detect/: CMakeLists.txt  README.md  main.cc
buildroot-overlay/package/ai_demo/person_distance/: CMakeLists.txt  main.cc  person_detect.cc  person_detect.h
buildroot-overlay/package/ai_demo/pose_detect/: CMakeLists.txt  main.cc  pose_detect.cc  pose_detect.h
buildroot-overlay/package/ai_demo/pphumanseg/: CMakeLists.txt  README.md  main.cc  pphumanseg.cc  pphumanseg.h
buildroot-overlay/package/ai_demo/puzzle_game/: CMakeLists.txt  hand_detection.cc  hand_detection.h  hand_keypoint.cc  hand_keypoint.h  main.cc
buildroot-overlay/package/ai_demo/segment_yolov8n/: CMakeLists.txt  main.cc  segment.cc  segment.h
buildroot-overlay/package/ai_demo/shell/: anomaly_det_image.sh  bytetrack_img.sh  bytetrack_isp.sh  eye_gaze_image.sh  eye_gaze_isp.sh  face_alignment_image.sh  face_alignment_isp.sh  face_detect_image.sh  face_detect_isp.sh  face_emotion_image.sh  face_emotion_isp.sh  face_gender_image.sh  face_gender_isp.sh  face_glasses_image.sh  face_glasses_isp.sh  face_landmark_image.sh  face_landmark_isp.sh  face_mask_image.sh  face_mask_isp.sh  face_mesh_image.sh  face_mesh_isp.sh  face_parse_image.sh  face_parse_isp.sh  face_pose_image.sh  face_pose_isp.sh  finger_guessing_0_isp.sh  finger_guessing_1_isp.sh  finger_guessing_n_isp.sh  fitness_isp.sh  gesture.sh  handdet_cpp_image.sh  handdet_cpp_isp.sh  handkpclass_cpp_image.sh  handkpclass_cpp_isp.sh  handkpdet_cpp_image.sh  handkpdet_cpp_isp.sh  handkpflower_image.sh  handkpflower_isp.sh  handkpocr_cpp_image.sh  handkpocr_cpp_isp.sh  (+7 more)
buildroot-overlay/package/ai_demo/smoke_detect/: CMakeLists.txt  README.md  main.cc  smoke_detect.cc  smoke_detect.h
buildroot-overlay/package/display/: CMakeLists.txt  Config.in  display.mk  display.pc.in
buildroot-overlay/package/face_detect/: CMakeLists.txt  Config.in  Makefile  face_detect.mk  face_detection_320.kmodel  main.cc  main_cv.cpp  mobile_retinaface.cc  mobile_retinaface.h  model.cc  model.h  run.sh  util.h
buildroot-overlay/package/vvcam/: CMakeLists.txt  Config.in  Makefile  isp_media_server  vvcam.mk
(+692 files in other folders)
